--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "migrate": "npx sequelize-cli db:migrate",
     "seed": "npx sequelize-cli db:seed:all",
     "resetDB": "npx sequelize-cli db:migrate:undo:all && npm run initdev",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "undomigrate": "npx sequelize-cli db:migrate:undo"
   },
   "keywords": [
     "template",
